--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script>
-            var res='';
-            var ans;
-            function ansss(){
-                document.getElementById('anss').innerHTML=res;
-                ans=eval(res);
-                console.log(res);
-            }
-        </script>
+        <script src="index.js"></script>
         <div style="background-color:#ffa82f">
             <div class="tab"><p id='anss' style="color: white;"><span class="blink">|</span></p></div>
             <div class="button">
