--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="button">
                 <button onclick="res=''; document.getElementById('anss').innerHTML='<span class=&quot;blink&quot;>|</span>';">AC</button>
                 <button onclick="res+='%';document.getElementById('anss').innerHTML=res;">%</button>
-                <button onclick="let len=res.length;res=res.slice(0,len-1);ansss();if (res===''){document.getElementById('anss').innerHTML='|'};">C</button>
+                <button onclick="let len=res.length;res=res.slice(0,len-1);ansss();if (res===''){document.getElementById('anss').innerHTML='<span class=&quot;blink&quot;>|</span>'};">C</button>
             </div>
         </div>
     </body>
